--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -24,3 +24,24 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
+    
+  push:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [14.x]
+    
+    steps:
+      - name: docker build
+        uses: actions/docker/cli@master
+        with:
+          args: build -t klurpicolo/nest-js-helloworld .
+      - name: docker login
+        uses: actions/docker/login@master
+        env:
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+      - name: docker push
+        uses: actions/docker/cli@master
+        with:
+          args: push klurpicolo/nest-js-helloworld
