--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -33,15 +33,12 @@ jobs:
     
     steps:
       - name: docker build
-        uses: actions/docker/cli@master
+        uses: actions/docker/cli@main
         with:
           args: build -t klurpicolo/nest-js-helloworld .
-      - name: docker login
-        uses: actions/docker/login@master
-        env:
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-      - name: docker push
-        uses: actions/docker/cli@master
+      - name: klurpicolodocker/nest-js-helloworld
+        uses: elgohr/Publish-Docker-Github-Action@master
         with:
-          args: push klurpicolo/nest-js-helloworld
+          name: push to docker hub
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
