--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -32,13 +32,9 @@ jobs:
         node-version: [14.x]
     
     steps:
-      - name: docker build
-        uses: actions/docker/cli@main
-        with:
-          args: build -t klurpicolo/nest-js-helloworld .
-      - name: klurpicolodocker/nest-js-helloworld
+      - name: Build docker and push to DockerHub
         uses: elgohr/Publish-Docker-Github-Action@master
         with:
-          name: push to docker hub
+          name: klurpicolodocker/nest-js-helloworld
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
