--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -38,4 +38,4 @@ jobs:
           name: klurpicolodocker/nest-js-helloworld
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          dockerfile: Dockerfile
+          dockerfile: ./.github/workflows/Dockerfile
