--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -32,10 +32,24 @@ jobs:
         node-version: [14.x]
     
     steps:
-      - name: Build docker and push to DockerHub
-        uses: elgohr/Publish-Docker-Github-Action@master
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
         with:
-          name: klurpicolodocker/nest-js-helloworld
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          dockerfile: ./.github/workflows/Dockerfile
+
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          context: ./
+          file: ./Dockerfile
+          push: true
+          tags: klurpicolodocker/nestjs-helloworld:latest
+
+      - name: Image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
