--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -32,6 +32,8 @@ jobs:
         node-version: [14.x]
     
     steps:
+      - uses: actions/checkout@v2
+      
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
