--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -33,7 +33,7 @@ jobs:
     
     steps:
       - uses: actions/checkout@v2
-      
+
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
@@ -51,7 +51,4 @@ jobs:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: klurpicolodocker/nestjs-helloworld:latest
-
-      - name: Image digest
-        run: echo ${{ steps.docker_build.outputs.digest }}
+          tags: klurpicolodocker/nestjs-helloworld:$GITHUB_SHA
