update docker tag

--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -52,4 +52,4 @@ jobs:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: klurpicolodocker/nestjs-helloworld:${GITHUB_SHA}
+          tags: klurpicolodocker/nestjs-helloworld:${{GITHUB_SHA}}
