--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint && npm test",
+      "pre-commit": "npm run lint",
       "pre-push": "npm run lint && npm test"
     }
   }
