--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -85,6 +85,6 @@ jobs:
 
     - name: Deploy
       run: |-
-        gcloud compute instances update-container "$GCE_INSTANCE" \
-          --zone "$GCE_INSTANCE_ZONE" \
-          --container-image "gcr.io/$PROJECT_ID/$GCE_INSTANCE-image:$GITHUB_SHA"
+        gcloud compute instances update-container "nestjs-cicd-example-project" \
+          --zone "us-central1-a" \
+          --container-image "gcr.io/keyspace-demo-cicd/nestjs-cicd-example-project-image:$GITHUB_SHA"
