--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -98,7 +98,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: API-test
-    - uses: matt-ball/newman-action@master
+      uses: matt-ball/newman-action@master
       with:
         collection: ./postman/postman_collection.json
         environment: ./postman/DEV.postman_environment.json
