add work around for wait for deployment

--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -99,6 +99,12 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
+    - name: Sleep for 60 seconds
+    #This is work around for waiting for GCP to deploy and done
+      uses: jakejarvis/wait-action@master
+      with:
+        time: '1m'
+
     - name: API-test
       uses: matt-ball/newman-action@master
       with:
